--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <figure>
                 <img src="./assets/cart.svg" alt="Shopping Cart" />
             </figure>
-            <button class="btn-small-green">Sign in</button>
+            <button class="btn-small-green">Log in</button>
         </div>
     </nav>
 </header>        <section id="hero-section">
