Make some small changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 />
                 <ul class="navigation__links">
                     <li><a href="" id="navigation__link">Home</a></li>
-                    <li><a href="">Menuu</a></li>
+                    <li><a href="">Menu</a></li>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Reservation</a></li>
                     <li><a href="">Contact Us</a></li>
