--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <figure>
                         <img src="./assets/cart.svg" alt="Shopping Cart" />
                     </figure>
-                    <button class="btn-small-green">Log in</button>
+                    <button class="btn btn-s btn-green">Log in</button>
                 </div>
             </nav>
         </header>
@@ -42,8 +42,8 @@
                         Sodales senectus dictum arcu sit tristique donec eget.
                     </p>
                     <div class="hero-section__cta">
-                        <button class="btn-large-orange">Order Now</button>
-                        <button class="btn-large-green">Reservation</button>
+                        <button class="btn btn-l btn-orange">Order Now</button>
+                        <button class="btn btn-l btn-green">Reservation</button>
                     </div>
                 </div>
 
@@ -56,15 +56,31 @@
                 </div>
             </div>
         </section>
+        <section id="welcome-section">
+            <div class="welcome-section__container">
+                <figure class="welcome-section__left">
+                    <img src="./assets/salad.png" alt="Salad" />
+                </figure>
+                <div class="welcome-section__right">
+                    <h2>Welcome to <span>DeliziOso</span></h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Facilisis ultricies at eleifend proin. Congue nibh nulla
+                        malesuada ultricies nec quam
+                    </p>
+                    <button class="btn btn-l btn-orange">See Our Menu</button>
+                </div>
+            </div>
+        </section>
         <section id="menu-section">
             <div class="menu-section__container">
                 <h2>Our Popular Menu</h2>
                 <div class="menu-section__filters">
-                    <button class="btn-large-black">All Catagories</button>
-                    <button class="btn-large-gray">Dinner</button>
-                    <button class="btn-large-gray">Lunch</button>
-                    <button class="btn-large-gray">Dessert</button>
-                    <button class="btn-large-gray">Drink</button>
+                    <button class="btn btn-l btn-black">All Catagories</button>
+                    <button class="btn btn-l btn-gray">Dinner</button>
+                    <button class="btn btn-l btn-gray">Lunch</button>
+                    <button class="btn btn-l btn-gray">Dessert</button>
+                    <button class="btn btn-l btn-gray">Drink</button>
                 </div>
                 <div class="menu-section__meals">
                     <div class="card">
@@ -87,7 +103,9 @@
                         </p>
                         <div class="card__footer">
                             <span class="menu-section__price">$11.99</span>
-                            <button class="btn-md-orange">Order Now</button>
+                            <button class="btn btn-m btn-orange">
+                                Order Now
+                            </button>
                         </div>
                     </div>
                     <div class="card">
@@ -110,7 +128,9 @@
                         </p>
                         <div class="card__footer">
                             <span class="menu-section__price">$14.49</span>
-                            <button class="btn-md-orange">Order Now</button>
+                            <button class="btn btn-m btn-orange">
+                                Order Now
+                            </button>
                         </div>
                     </div>
                     <div class="card">
@@ -133,7 +153,9 @@
                         </p>
                         <div class="card__footer">
                             <span class="menu-section__price">$8.99</span>
-                            <button class="btn-md-orange">Order Now</button>
+                            <button class="btn btn-m btn-orange">
+                                Order Now
+                            </button>
                         </div>
                     </div>
                     <div class="card">
@@ -156,7 +178,9 @@
                         </p>
                         <div class="card__footer">
                             <span class="menu-section__price">$6.99</span>
-                            <button class="btn-md-orange">Order Now</button>
+                            <button class="btn btn-m btn-orange">
+                                Order Now
+                            </button>
                         </div>
                     </div>
                     <div class="card">
@@ -179,7 +203,9 @@
                         </p>
                         <div class="card__footer">
                             <span class="menu-section__price">$9.99</span>
-                            <button class="btn-md-orange">Order Now</button>
+                            <button class="btn btn-m btn-orange">
+                                Order Now
+                            </button>
                         </div>
                     </div>
                     <div class="card">
@@ -202,7 +228,9 @@
                         </p>
                         <div class="card__footer">
                             <span class="menu-section__price">$17.99</span>
-                            <button class="btn-md-orange">Order Now</button>
+                            <button class="btn btn-m btn-orange">
+                                Order Now
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -223,7 +251,7 @@
                         Facilisis ultricies at eleifend proin. Congue nibh nulla
                         malesuada ultricies nec quam
                     </p>
-                    <button class="btn-large-orange">Reservation</button>
+                    <button class="btn btn-l btn-orange">Reservation</button>
                 </div>
             </div>
         </section>
@@ -247,49 +275,49 @@
                         <p>Chef</p>
                     </div>
                 </div>
-                <button class="btn-large-orange">View All</button>
+                <button class="btn btn-l btn-orange">View All</button>
             </div>
         </section>
         <section id="testimonials-section">
             <div class="testimonials-section__container">
-        <h2>What Customers Say</h2>
-        <div class="testimonials-section__testimonials">
-            <div class="testimonials-section__testimonial">
-                <img
-                    src="./assets/customer-2.png"
-                    alt="Starla Virgoun"
-                />
-                <h4>Starla Virgoun</h4>
-                <h5>Financial Advisor</h5>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Consequatur excepturi numquam ratione veniam
-                    molestias.
-                </p>
+                <h2>What Customers Say</h2>
+                <div class="testimonials-section__testimonials">
+                    <div class="testimonials-section__testimonial">
+                        <img
+                            src="./assets/customer-2.png"
+                            alt="Starla Virgoun"
+                        />
+                        <h4>Starla Virgoun</h4>
+                        <h5>Financial Advisor</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Consequatur excepturi numquam ratione veniam
+                            molestias.
+                        </p>
+                    </div>
+                    <div class="testimonials-section__testimonial">
+                        <img src="./assets/customer-3.png" alt="Tosh Mat" />
+                        <h4>Tosh Mat</h4>
+                        <h5>Uber Driver</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Consequatur excepturi numquam ratione veniam
+                            molestias.
+                        </p>
+                    </div>
+                    <div class="testimonials-section__testimonial">
+                        <img src="./assets/customer-1.png" alt="James Steven" />
+                        <h4>James Steven</h4>
+                        <h5>Teacher</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Consequatur excepturi numquam ratione veniam
+                            molestias.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="testimonials-section__testimonial">
-                <img src="./assets/customer-3.png" alt="Tosh Mat" />
-                <h4>Tosh Mat</h4>
-                <h5>Uber Driver</h5>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Consequatur excepturi numquam ratione veniam
-                    molestias.
-                </p>
-            </div>
-            <div class="testimonials-section__testimonial">
-                <img src="./assets/customer-1.png" alt="James Steven" />
-                <h4>James Steven</h4>
-                <h5>Teacher</h5>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Consequatur excepturi numquam ratione veniam
-                    molestias.
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
+        </section>
         <section id="hours-section">
             <div class="hours-section__container">
                 <div class="hours-section__background">
@@ -301,8 +329,8 @@
                             <p>Dinner: Sunday: 04:00pm-08:00pm</p>
                             <p>04:00pm-09:00pm</p>
                         </div>
-                        <button class="btn-large-orange">Order Now</button>
-                        <button class="btn-large-white">Reservation</button>
+                        <button class="btn btn-l btn-orange">Order Now</button>
+                        <button class="btn btn-l btn-white">Reservation</button>
                     </div>
                 </div>
             </div>
